02-molecules/menus/main-menu/_00-main-menu.scss
/* Menu media */
$main-menu-medium: $medium;

/* Nav */
.main-nav {
  display: none;

  @include medium {
    display: block;
  }

  &--open {
    background-color: color('white');
    display: block;
    left: 0;
    overflow-y: scroll;
    position: absolute;
    top: 112px;
    right: 0;
    width: 100%;
  }
}

/* UL */
.main-menu {
  @include list-reset;

  background-color: color('gray-300');
  border-bottom: 1px solid color('gray-400');
  position: relative;

  @include medium {
    border-bottom: none;
    background: transparent;
  }
}

/*
 * Sub Navigation
 */

/* UL (Nested) */
.main-menu--sub {
  background-color: color('gray-300');
  border-bottom: none;
  height: 0;
  overflow: hidden;
  width: 100%;

  @include medium {
    background-color: color('gray-300');
    display: none;
    height: auto;
    left: 0;
    overflow: visible;
    position: absolute;
    top: 100%;
    width: 315px;
    font-size: 0.9rem;
  }

  &:hover {
    @include medium {
      .main-menu__link--sub {
        &.active,
        &:active,
        &:hover {
          color: color('white');
          background-color: color('primary-500');
        }
      }
    }
  }

  /* See main-menu.js */
  &-open {
    height: auto;
  }
}

.main-menu--sub-2 {
  @include medium {
    display: none; /* Never shown on large screens */
  }
}

